[package]
name = "example"
version = "0.0.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rsx = { path = "../rsx" }
futures-signals = "0.3.34"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"


[dependencies.web-sys]
version = "0.3.70"
features = ["Document", "HtmlHeadElement"]
