[package]
name = "rsx-dominator"
version = "0.0.0"
authors = ["Pauan <pauanyu+github@pm.me>"]
description = "Zero-cost ultra-high-performance declarative DOM library using FRP signals"
homepage = "https://github.com/Pauan/rust-rsx-dominator"
readme = "README.md"
license = "MIT"
edition = "2024"

[features]
default = ["wasm-bindgen/enable-interning"]
nightly = []

[dependencies]
once_cell = "1.7.2"
discard = "1.0.3"
pin-project = "1.0.1"
futures-channel = "0.3.0"
futures-util = "0.3.0"
futures-signals = "0.3.5"
wasm-bindgen = "0.2.48"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4.9"
gloo-events = "0.1.2"

[dependencies.web-sys]
version = "0.3.70"
features = [
    "CharacterData",
    "Comment",
    "CssRule",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleRule",
    "CssStyleSheet",
    "DataTransfer",
    "Document",
    "DomTokenList",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "History",
    "InputEvent",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlInputElement",
    "HtmlStyleElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "MediaQueryList",
    "MouseEvent",
    "AnimationEvent",
    "WheelEvent",
    "Node",
    "PointerEvent",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "StyleSheet",
    "SvgElement",
    "Text",
    "Touch",
    "TouchEvent",
    "TouchList",
    "UiEvent",
    "Window",
]

[profile.release]
debug-assertions = true

[profile.bench]
debug-assertions = true
