[package]
name = "rsx-lib-macros"
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tascord/rsx"
description = "Helper for the rsx crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Document", "Element", "HtmlElement", "Window"]
