[package]
name = "rsx-parser"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/tascord/rsx"
description = "Helper for the rsx crate"

[dependencies]
rsx-dominator = { path = "../rsx-dominator", version = "0.1.1" }
futures-signals = "0.3.34"
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.100", features = ["full"] }
proc-macro2 = "1.0.94"
itertools = "0.14.0"
quote = "1.0.40"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "HtmlAllCollection",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDListElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDirectoryElement",
    "HtmlDivElement",
    "HtmlDocument",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFontElement",
    "HtmlFormControlsCollection",
    "HtmlFormElement",
    "HtmlFrameElement",
    "HtmlFrameSetElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMediaElement",
    "HtmlMenuElement",
    "HtmlMenuItemElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlOListElement",
    "HtmlObjectElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlUnknownElement",
    "HtmlVideoElement",
]
