[package]
name = "rsx"
version = "0.0.0"
edition = "2024"

[dependencies]
rsx-macro = { path = "../rsx-macro", version = "0.0.0" }
rsx-dominator = { path = "../rsx-dominator", version = "0.0.0" }
parser = { path = "../parser", version = "0.0.0" }
futures-signals = "0.3.34"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.70"
features = ["Document", "HtmlHeadElement"]
